--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
   </head>
-  <body>
-    <div id="app"></div>
+  <body >
+    <div id="app" style="height: 100%;"></div>
     <script src="/app/bundle.js"></script>
   </body>
 </html>
