--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   </head>
   <body >
     <div id="app" style="height: 100%;"></div>
-    <script src="/app/bundle.js"></script>
+    <script src="app/bundle.js"></script>
   </body>
 </html>
