--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>DSL</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
+    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/258531/react-vis.css"></link>
   </head>
   <body >
     <div id="app" style="height: 100%;"></div>
